# wuputd

./: README.md  pyproject.toml
backend/: app.py  chatbot.py  lib.py  tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  chat-component.jsx  main.jsx
nebula_api_wrapper/: README.md  pyproject.toml  setup.py
nebula_api_wrapper/.openapi-generator/: FILES
nebula_api_wrapper/docs/: DefaultApi.md  SchemaAPIResponseArrayInt.md  SchemaAPIResponseArraySchemaAutocomplete.md  SchemaAPIResponseArraySchemaBuildingRooms.md  SchemaAPIResponseArraySchemaCourse.md  SchemaAPIResponseArraySchemaGradeData.md  SchemaAPIResponseArraySchemaProfessor.md  SchemaAPIResponseArraySchemaSection.md  SchemaAPIResponseArraySchemaTypedGradeData.md  SchemaAPIResponseInt.md  SchemaAPIResponseSchemaBucketInfo.md  SchemaAPIResponseSchemaCourse.md  SchemaAPIResponseSchemaMultiBuildingEventsSchemaAstraEvent.md  SchemaAPIResponseSchemaMultiBuildingEventsSchemaMazevoEvent.md  SchemaAPIResponseSchemaMultiBuildingEventsSchemaSectionWithTime.md  SchemaAPIResponseSchemaObjectInfo.md  SchemaAPIResponseSchemaProfessor.md  SchemaAPIResponseSchemaSection.md  SchemaAPIResponseSchemaSingleBuildingEventsSchemaSectionWithTime.md  SchemaAPIResponseString.md  SchemaAcademicSession.md  SchemaAcademicSessionSections.md  SchemaAssistant.md  SchemaAstraEvent.md  SchemaAutocomplete.md  SchemaBucketInfo.md  SchemaBuildingRooms.md  SchemaCollectionRequirement.md  SchemaCourse.md  SchemaCourseNumberAcademicSessions.md  SchemaGradeData.md  SchemaLocation.md  (+20 more)
(+110 files in other folders)
