[project]
name = "wup-utd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "openapi-client",
]

[dependency-groups]
dev = [
    "openapi-generator-cli>=7.12.0",
]

[tool.uv.sources]
openapi-client = { path = "nebula_api_wrapper" }
