[project]
name = "wup-utd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-socketio>=5.5.1",
    "google-genai>=1.11.0",
    "markdown>=3.8",
    "openapi-client",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "openapi-generator-cli>=7.12.0",
]

[tool.uv.sources]
openapi-client = { path = "nebula_api_wrapper" }
